deployment/k8s/app-deploypment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    name: app
spec:
  selector:
    matchLabels:
      run: app
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
      - name: app
        image: pee0982817150/devops-practice-frontend:v2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/config.json
          subPath: config.json
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi
      volumes:
      - name: config-volume
        configMap:
          name: all-config
          items:
          - key: config.json
            path: config.json
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    run: app
spec:
  ports:
  - port: 80
  selector:
    run: app
